# kuophoto-image-organizer

./: .gitignore  README.md  README_DEPLOY.md  organize_jpgs.py  organize_jpgs.spec  pyproject.toml  requirements.freeze.txt  web_organize.py  web_organize.spec
templates/: index.html
