[project]
name = "imgk-organizer"
version = "0.1.0"
description = "Organize JPGs into folders by the 4 digits after IMGK"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flask>=2.2,<3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
# 預設設定即可，使用 `uv sync` 建立 .venv 並安裝依賴

